# Android-NCNN-ML

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jiwon/android_ncnn_ml/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yoloXncnn_jni.cpp  yoloXncnn_jni.h
app/src/main/cpp/libs/ncnn/arm64-v8a/lib/cmake/ncnn/: ncnn.cmake
app/src/main/java/com/jiwon/android_ncnn_ml/: MainActivity.kt
app/src/main/java/com/jiwon/android_ncnn_ml/ml/: YOLOX.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jiwon/android_ncnn_ml/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
